@@ -12,13 +12,8 @@ fi
 
 echo "PID of $0 : $$"
 
-export JAVA_ARGS='--add-modules java.xml.bind'
-
 #export PERF_COMMAND="perf stat --no-big-num -e  L1-dcache-load-misses,L1-dcache-loads,LLC-load-misses,LLC-loads,dTLB-load-misses,dTLB-loads,instructions,branches"
-export PERF_COMMAND=" "
-
-# see /proc/cmdline: we run with isolcpu 0-6
-ISOLATE_CPUS_COMMAND="chrt -r 1 taskset 0x3f "
+#export PERF_COMMAND=" "
 
 NUM_RUNS=4
 
@@ -32,14 +27,13 @@ export WHAT_MAX_HEAPSIZE="-Xmx8g"
 export JDK=$JDK_TO_TEST
 export JVM_ARGS="-XX:+UnlockExperimentalVMOptions -XX:+UseCompactObjectHeaders -Xshare:off"
 export TESTNAME="COH-ON-${TESTNAME_BASE}-${run}"
-bash ./run_composite.sh
+bash ./run-single-test.sh
 
 export JDK=$JDK_TO_TEST
 export JVM_ARGS="-XX:+UnlockExperimentalVMOptions -XX:-UseCompactObjectHeaders -Xshare:off"
 export TESTNAME="COH-OFF-${TESTNAME_BASE}-${run}"
-bash ./run_composite.sh
+bash ./run-single-test.sh
 
 done
 
-shutdown -P now
 
